implemented computational exercises, made kNN more primitive